Unify version management: BGP and its dependencies
Change-Id: Ia3369844cc677cf40682571fb4ae7cfb0d39a657
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/bgp/parser-spi/pom.xml
+++ b/bgp/parser-spi/pom.xml
@@ -22,44 +22,41 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>concepts</artifactId>
-            <version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>util</artifactId>
-            <version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>framework</artifactId>
-            <version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>bgp-concepts</artifactId>
-            <version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>bgp-parser-api</artifactId>
-            <version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>${guava.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>${slf4j.version}</version>
         </dependency>
+
+        <!-- FIXME: move into bgp-parser-spi-osgi -->
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.core</artifactId>
             <version>${osgi.version}</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- Testing dependencies -->
         <dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
