--- a/mockito-configuration/pom.xml
+++ b/mockito-configuration/pom.xml
@@ -22,8 +22,8 @@
 		<!-- all those dependencies will be in test scope as mockito-configuration should be referenced as test scope dependency -->
 		<dependency>
 			<groupId>org.mockito</groupId>
-			<artifactId>mockito-core</artifactId>
-            <version>${mockito.version}</version>
+            <artifactId>mockito-core</artifactId>
+            <scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
