--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,12 @@
 				<version>${mockito.version}</version>
 				<scope>test</scope>
 			</dependency>
+			<dependency>
+				<groupId>${project.groupId}</groupId>
+				<artifactId>mockito-configuration</artifactId>
+				<version>${project.version}</version>
+				<scope>test</scope>
+			</dependency>
 
 			<!-- Supporting Libraries -->
             <dependency>
