--- a/pcep/spi/pom.xml
+++ b/pcep/spi/pom.xml
@@ -21,30 +21,31 @@
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>concepts</artifactId>
-            <version>${project.version}</version>
-		</dependency>
+			<artifactId>pcep-api</artifactId>
+        </dependency>
+
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>pcep-api</artifactId>
-            <version>${project.version}</version>
-		</dependency>
+			<artifactId>concepts</artifactId>
+        </dependency>
+
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>${slf4j.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>mockito-configuration</artifactId>
-            <version>${project.version}</version>
-			<scope>test</scope>
         </dependency>
+
+        <!-- FIXME: move into pcep-spi-osgi -->
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.core</artifactId>
             <version>${osgi.version}</version>
             <scope>provided</scope>
+        </dependency>
+
+        <!-- Testing dependencies -->
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>mockito-configuration</artifactId>
         </dependency>
 	</dependencies>
 
