Unify dependencies: RSVP and its dependencies
Change-Id: I5194265378041e5c5f603a24f76e2eac44ae691e
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/rsvp/pom.xml
+++ b/rsvp/pom.xml
@@ -19,4 +19,14 @@
 	<modules>
         <module>api</module>
     </modules>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>rsvp-api</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
