Unify version management: Topology component
Change-Id: Ia1abf29b0f586152ae6f66a2f52447b7d039ebe6
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/topology/pom.xml
+++ b/topology/pom.xml
@@ -19,7 +19,32 @@
 	<modules>
         <module>api</module>
         <module>api-config</module>
-		<module>tunnel-api</module>
         <module>segment-routing</module>
+		<module>tunnel-api</module>
     </modules>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>topology-api</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>topology-api-config</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>topology-segment-routing</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>topology-tunnel-api</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
