--- a/bgp/linkstate/pom.xml
+++ b/bgp/linkstate/pom.xml
@@ -54,6 +54,10 @@
         </dependency>
 
 		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+        </dependency>
+		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
         </dependency>
