--- a/bgp/parser-spi-config/pom.xml
+++ b/bgp/parser-spi-config/pom.xml
@@ -1,3 +1,5 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- vi: set et smarttab sw=4 tabstop=4: -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
@@ -23,6 +25,10 @@
       <dependency>
          <groupId>${project.groupId}</groupId>
          <artifactId>bgp-parser-spi</artifactId>
+      </dependency>
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
       </dependency>
    </dependencies>
 
