--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -22,43 +22,36 @@
         <dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-buffer</artifactId>
-            <version>${netty.version}</version>
 		</dependency>
         <dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-codec</artifactId>
-            <version>${netty.version}</version>
 		</dependency>
         <dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-common</artifactId>
-            <version>${netty.version}</version>
 		</dependency>
         <dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-transport</artifactId>
-            <version>${netty.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>${guava.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.findbugs</groupId>
 			<artifactId>jsr305</artifactId>
-			<version>2.0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>${slf4j.version}</version>
-		</dependency>
+        </dependency>
+
+        <!-- Testing dependencies -->
 		<dependency>
 			<groupId>org.opendaylight.bgpcep</groupId>
 			<artifactId>mockito-configuration</artifactId>
-            <version>${project.version}</version>
-			<scope>test</scope>
 		</dependency>
         <dependency>
             <groupId>junit</groupId>
