Add documentation generators
Change-Id: I73f24b28c7ca16dbd0d62f94754548e0a25d6761
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/pcep/api/pom.xml
+++ b/pcep/api/pom.xml
@@ -86,63 +86,67 @@
 	<build>
         <plugins>
 
-           <plugin>
-               <groupId>org.opendaylight.yangtools</groupId>
-               <artifactId>yang-maven-plugin</artifactId>
-               <version>${yangtools.version}</version>
-               <executions>
-                   <execution>
-                       <goals>
-                           <goal>generate-sources</goal>
-                       </goals>
-                       <configuration>
-                           <yangFilesRootDir>src/main/yang</yangFilesRootDir>
-                           <codeGenerators>
-                               <generator>
-                                   <codeGeneratorClass>
-                                       org.opendaylight.yangtools.maven.sal.api.gen.plugin.CodeGeneratorImpl
-                                   </codeGeneratorClass>
-                                   <outputBaseDir>
-                                       target/generated-sources/sal
-                                   </outputBaseDir>
-                               </generator>
-                           </codeGenerators>
-                           <inspectDependencies>true</inspectDependencies>
-                       </configuration>
-                   </execution>
-               </executions>
-               <dependencies>
-                   <dependency>
-                       <groupId>org.opendaylight.yangtools</groupId>
-                       <artifactId>maven-sal-api-gen-plugin</artifactId>
-                       <version>${yang.binding.version}</version>
-                       <type>jar</type>
-                   </dependency>
-               </dependencies>
-           </plugin>
-           <plugin>
-               <groupId>org.apache.felix</groupId>
-               <artifactId>maven-bundle-plugin</artifactId>
-               <version>${maven.bundle.version}</version>
-               <extensions>true</extensions>
-               <configuration>
-                   <instructions>
-                       <Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
-                       <Export-Package>
-                           org.opendaylight.protocol.pcep,
-                           org.opendaylight.protocol.pcep.concepts,
-                           org.opendaylight.protocol.pcep.message,
-                           org.opendaylight.protocol.pcep.object,
-                           org.opendaylight.protocol.pcep.subobject,
-                           org.opendaylight.protocol.pcep.tlv,
-                           org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.message.rev131007.*,
-                           org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.types.rev131005.*,
-                       </Export-Package>
-                   </instructions>
-               </configuration>
-           </plugin>
-		</plugins>
-	</build>
+            <plugin>
+                <groupId>org.opendaylight.yangtools</groupId>
+                <artifactId>yang-maven-plugin</artifactId>
+                <version>${yangtools.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate-sources</goal>
+                        </goals>
+                        <configuration>
+                            <yangFilesRootDir>src/main/yang</yangFilesRootDir>
+                            <codeGenerators>
+                                <generator>
+                                    <codeGeneratorClass>
+                                        org.opendaylight.yangtools.maven.sal.api.gen.plugin.CodeGeneratorImpl
+                                    </codeGeneratorClass>
+                                    <outputBaseDir>
+                                        target/generated-sources/sal
+                                    </outputBaseDir>
+                                </generator>
+                                <generator>
+                                    <codeGeneratorClass>org.opendaylight.yangtools.yang.unified.doc.generator.maven.DocumentationGeneratorImpl</codeGeneratorClass>
+                                    <outputBaseDir>target/generated-sources/site</outputBaseDir>
+                                </generator>
+                            </codeGenerators>
+                            <inspectDependencies>true</inspectDependencies>
+                        </configuration>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.opendaylight.yangtools</groupId>
+                        <artifactId>maven-sal-api-gen-plugin</artifactId>
+                        <version>${yang.binding.version}</version>
+                        <type>jar</type>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <version>${maven.bundle.version}</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <instructions>
+                        <Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
+                        <Export-Package>
+                            org.opendaylight.protocol.pcep,
+                            org.opendaylight.protocol.pcep.concepts,
+                            org.opendaylight.protocol.pcep.message,
+                            org.opendaylight.protocol.pcep.object,
+                            org.opendaylight.protocol.pcep.subobject,
+                            org.opendaylight.protocol.pcep.tlv,
+                            org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.message.rev131007.*,
+                            org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.types.rev131005.*,
+                        </Export-Package>
+                    </instructions>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 	<distributionManagement>
 		<site>
