--- a/pcep/tunnel-api/pom.xml
+++ b/pcep/tunnel-api/pom.xml
@@ -49,65 +49,69 @@
         </dependency>
 	</dependencies>
 
-	<build>
+    <build>
         <plugins>
-           <plugin>
-               <groupId>org.opendaylight.yangtools</groupId>
-               <artifactId>yang-maven-plugin</artifactId>
-               <version>${yangtools.version}</version>
-               <executions>
-                   <execution>
-                       <goals>
-                           <goal>generate-sources</goal>
-                       </goals>
-                       <configuration>
-                           <yangFilesRootDir>src/main/yang</yangFilesRootDir>
-                           <codeGenerators>
-                               <generator>
-                                   <codeGeneratorClass>
-                                       org.opendaylight.yangtools.maven.sal.api.gen.plugin.CodeGeneratorImpl
-                                   </codeGeneratorClass>
-                                   <outputBaseDir>
-                                       target/generated-sources/sal
-                                   </outputBaseDir>
-                               </generator>
-                           </codeGenerators>
-                           <inspectDependencies>true</inspectDependencies>
-                       </configuration>
-                   </execution>
-               </executions>
-               <dependencies>
-                   <dependency>
-                       <groupId>org.opendaylight.yangtools</groupId>
-                       <artifactId>maven-sal-api-gen-plugin</artifactId>
-                       <version>${yang.binding.version}</version>
-                       <type>jar</type>
-                   </dependency>
-               </dependencies>
-           </plugin>
-           <plugin>
-               <groupId>org.apache.felix</groupId>
-               <artifactId>maven-bundle-plugin</artifactId>
-               <version>${maven.bundle.version}</version>
-               <extensions>true</extensions>
-               <configuration>
-                   <instructions>
-                       <Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
-                       <Export-Package>
-                           org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.topology.tunnel.programming.rev130930.*,
-                       </Export-Package>
-                   </instructions>
-               </configuration>
-           </plugin>
-		</plugins>
-	</build>
+            <plugin>
+                <groupId>org.opendaylight.yangtools</groupId>
+                <artifactId>yang-maven-plugin</artifactId>
+                <version>${yangtools.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate-sources</goal>
+                        </goals>
+                        <configuration>
+                            <yangFilesRootDir>src/main/yang</yangFilesRootDir>
+                            <codeGenerators>
+                                <generator>
+                                    <codeGeneratorClass>
+                                        org.opendaylight.yangtools.maven.sal.api.gen.plugin.CodeGeneratorImpl
+                                    </codeGeneratorClass>
+                                    <outputBaseDir>
+                                        target/generated-sources/sal
+                                    </outputBaseDir>
+                                </generator>
+                                <generator>
+                                    <codeGeneratorClass>org.opendaylight.yangtools.yang.unified.doc.generator.maven.DocumentationGeneratorImpl</codeGeneratorClass>
+                                    <outputBaseDir>target/generated-sources/site</outputBaseDir>
+                                </generator>
+                            </codeGenerators>
+                            <inspectDependencies>true</inspectDependencies>
+                        </configuration>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.opendaylight.yangtools</groupId>
+                        <artifactId>maven-sal-api-gen-plugin</artifactId>
+                        <version>${yang.binding.version}</version>
+                        <type>jar</type>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <version>${maven.bundle.version}</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <instructions>
+                        <Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
+                        <Export-Package>
+                            org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.topology.tunnel.programming.rev130930.*,
+                        </Export-Package>
+                    </instructions>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
-	<distributionManagement>
-		<site>
-			<id>${project.artifactId}</id>
-			<name>PROGRAMMING-TUNNEL-PCEP-API Module site</name>
-			<url>${basedir}/target/site/${project.artifactId}</url>
-		</site>
-	</distributionManagement>
+    <distributionManagement>
+        <site>
+            <id>${project.artifactId}</id>
+            <name>PROGRAMMING-TUNNEL-PCEP-API Module site</name>
+            <url>${basedir}/target/site/${project.artifactId}</url>
+        </site>
+    </distributionManagement>
 
 </project>
