--- a/topology/api/pom.xml
+++ b/topology/api/pom.xml
@@ -40,61 +40,65 @@
 
 	<build>
         <plugins>
-           <plugin>
-               <groupId>org.opendaylight.yangtools</groupId>
-               <artifactId>yang-maven-plugin</artifactId>
-               <version>${yangtools.version}</version>
-               <executions>
-                   <execution>
-                       <goals>
-                           <goal>generate-sources</goal>
-                       </goals>
-                       <configuration>
-                           <yangFilesRootDir>src/main/yang</yangFilesRootDir>
-                           <codeGenerators>
-                               <generator>
-                                   <codeGeneratorClass>
-                                       org.opendaylight.yangtools.maven.sal.api.gen.plugin.CodeGeneratorImpl
-                                   </codeGeneratorClass>
-                                   <outputBaseDir>
-                                       target/generated-sources/sal
-                                   </outputBaseDir>
-                               </generator>
-                           </codeGenerators>
-                           <inspectDependencies>true</inspectDependencies>
-                       </configuration>
-                   </execution>
-               </executions>
-               <dependencies>
-                   <dependency>
-                       <groupId>org.opendaylight.yangtools</groupId>
-                       <artifactId>maven-sal-api-gen-plugin</artifactId>
-                       <version>${yang.binding.version}</version>
-                       <type>jar</type>
-                   </dependency>
-               </dependencies>
-           </plugin>
-           <plugin>
-               <groupId>org.apache.felix</groupId>
-               <artifactId>maven-bundle-plugin</artifactId>
-               <version>${maven.bundle.version}</version>
-               <extensions>true</extensions>
-               <configuration>
-                   <instructions>
-                       <Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
-                       <Export-Package>
-                           org.opendaylight.bgpcep.topology,
-                           org.opendaylight.yang.gen.v1.urn.tbd.params.xml.ns.yang.ospf.topology.rev131021.*,
-                           org.opendaylight.yang.gen.v1.urn.tbd.params.xml.ns.yang.network.ted.rev131021.*,
-                           org.opendaylight.yang.gen.v1.urn.tbd.params.xml.ns.yang.network.topology.rev131021.*,
-                           org.opendaylight.yang.gen.v1.urn.tbd.params.xml.ns.yang.nt.l3.unicast.igp.topology.rev131021.*,
-                           org.opendaylight.yang.gen.v1.urn.tbd.params.xml.ns.yang.network.isis.topology.rev131021.*,
-                       </Export-Package>
-                   </instructions>
-               </configuration>
-           </plugin>
-		</plugins>
-	</build>
+            <plugin>
+                <groupId>org.opendaylight.yangtools</groupId>
+                <artifactId>yang-maven-plugin</artifactId>
+                <version>${yangtools.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate-sources</goal>
+                        </goals>
+                        <configuration>
+                            <yangFilesRootDir>src/main/yang</yangFilesRootDir>
+                            <codeGenerators>
+                                <generator>
+                                    <codeGeneratorClass>
+                                        org.opendaylight.yangtools.maven.sal.api.gen.plugin.CodeGeneratorImpl
+                                    </codeGeneratorClass>
+                                    <outputBaseDir>
+                                        target/generated-sources/sal
+                                    </outputBaseDir>
+                                </generator>
+                                <generator>
+                                    <codeGeneratorClass>org.opendaylight.yangtools.yang.unified.doc.generator.maven.DocumentationGeneratorImpl</codeGeneratorClass>
+                                    <outputBaseDir>target/generated-sources/site</outputBaseDir>
+                                </generator>
+                            </codeGenerators>
+                            <inspectDependencies>true</inspectDependencies>
+                        </configuration>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.opendaylight.yangtools</groupId>
+                        <artifactId>maven-sal-api-gen-plugin</artifactId>
+                        <version>${yang.binding.version}</version>
+                        <type>jar</type>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <version>${maven.bundle.version}</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <instructions>
+                        <Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
+                        <Export-Package>
+                            org.opendaylight.bgpcep.topology,
+                            org.opendaylight.yang.gen.v1.urn.tbd.params.xml.ns.yang.ospf.topology.rev131021.*,
+                            org.opendaylight.yang.gen.v1.urn.tbd.params.xml.ns.yang.network.ted.rev131021.*,
+                            org.opendaylight.yang.gen.v1.urn.tbd.params.xml.ns.yang.network.topology.rev131021.*,
+                            org.opendaylight.yang.gen.v1.urn.tbd.params.xml.ns.yang.nt.l3.unicast.igp.topology.rev131021.*,
+                            org.opendaylight.yang.gen.v1.urn.tbd.params.xml.ns.yang.network.isis.topology.rev131021.*,
+                        </Export-Package>
+                    </instructions>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 	<distributionManagement>
 		<site>
