Rework PCEPDeserializerException and move it into SPI
Change-Id: Ifcdab5a8168c98bfb65586ed2ef07733352f895c
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/pcep/spi/pom.xml
+++ b/pcep/spi/pom.xml
@@ -41,6 +41,10 @@
         </dependency>
 
         <!-- Testing dependencies -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>mockito-configuration</artifactId>
